# troubadour

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  RALPH_LOOP_SUMMARY.md  README.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md
.cargo/: config.toml
.github/workflows/: benchmark.yml  build.yml  ci.yml
benches/: Cargo.toml  bench_helpers.rs  criterion.toml  dsp_benchmark.rs  memory_benchmark.rs  mixer_benchmark.rs  resampling_benchmark.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/cli/: main.rs  mod.rs
crates/app/src/gui/: mod.rs
crates/app/src/osc/: mod.rs
crates/core/: Cargo.toml
crates/core/benches/: mixer_bench.rs
crates/core/examples/: config_demo.rs
crates/core/src/: lib.rs
crates/core/src/domain/: audio.rs  config.rs  dsp.rs  mixer.rs  mod.rs
crates/core/src/domain/mixer/: bus.rs
crates/core/src/use_cases/: config.rs  mixer.rs  mod.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/infra/src/audio/: cpal_backend.rs  engine.rs  lockfree_buffer.rs  mod.rs  stream.rs
crates/infra/src/midi/: mod.rs
crates/infra/src/persistence/: mod.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  mixer_integration.rs
crates/troubadour-core/: Cargo.toml
crates/troubadour-core/src/: device.rs  engine.rs  lib.rs  mixer.rs  resampler.rs
crates/troubadour-core/src/dsp/: compressor.rs  eq.rs  limiter.rs  mod.rs  noise_gate.rs
crates/troubadour-shared/: Cargo.toml
crates/troubadour-shared/src/: audio.rs  config.rs  dsp.rs  error.rs  lib.rs  messages.rs  mixer.rs  profile.rs
crates/troubadour-ui/: Cargo.toml  Dioxus.toml  tailwind.config.js
crates/troubadour-ui/assets/: index.html  input.css  tailwind.css
crates/troubadour-ui/src/: main.rs
crates/troubadour-ui/src/components/: channel_strip.rs  device_panel.rs  dsp_controls.rs  mixer_view.rs  mod.rs  profile_bar.rs  routing_matrix.rs  vu_meter.rs
docs/: ARCHITECTURE.md  CROSS_PLATFORM_BUILD.md  DEVELOPMENT_GUIDE.md  GUIDE.md  MASTERPLAN.md  OPTIMIZATION_CHECKLIST.md  PERFORMANCE.md  PERFORMANCE_REPORT.md  PLAN.md  REFERENCE.md  SECURITY_SUMMARY.md  US005_IMPLEMENTATION.md  US010_IMPLEMENTATION.md  VOICEMEETER_ARCHITECTURE_ANALYSIS.md
gui/: package-lock.json  package.json
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
gui/src/components/: BusStrip.tsx  KeyboardShortcutsModal.tsx  MixerChannel.tsx  MixerPanel.tsx  PresetManager.tsx  VolumeFader.tsx  index.ts
gui/src/hooks/: useAutoSaveConfig.ts  useKeyboardShortcuts.ts
gui/src/types/: tauri.d.ts
scripts/: bench.ps1  bench.sh
