[package]
name = "troubadour-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "troubadour"
path = "src/cli/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

troubadour-core = { path = "../core" }
troubadour-infra = { path = "../infra" }
