[package]
name = "troubadour-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
num-complex = { workspace = true }
notify = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
troubadour-infra = { path = "../infra" }

[[bench]]
name = "mixer_bench"
harness = false
