[package]
name = "troubadour-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dev-dependencies]
tokio = { workspace = true }
troubadour-core = { path = "../core" }
troubadour-infra = { path = "../infra" }
troubadour-app = { path = "../app" }
