[package]
name = "gui"
version = "0.1.0"
description = "Troubadour - Virtual Audio Mixer"
authors = ["Troubadour Team"]
edition = "2021"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Troubadour backend
troubadour-core = { path = "../../crates/core" }
troubadour-infra = { path = "../../crates/infra" }

# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

